--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,7 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
-    "axios": "1.4.0",
+    "axios": "^1.4.0",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "expeditious-engine-memory": "0.2.1",
