--- a/api/package.json
+++ b/api/package.json
@@ -19,9 +19,12 @@
     "@types/morgan": "1.9.4",
     "@types/multer": "1.4.7",
     "@types/supertest": "2.0.12",
+    "chai": "4.3.7",
     "jest": "29.6.2",
+    "mocha": "10.2.0",
     "nodemon": "3.0.1",
     "supertest": "6.3.3",
+    "ts-jest": "29.1.1",
     "typescript": "5.1.6"
   },
   "dependencies": {
