--- a/api/package.json
+++ b/api/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
     "@types/cors": "2.8.13",
     "@types/dotenv": "8.2.0",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.3",
+    "@types/jsonwebtoken": "9.0.2",
     "@types/morgan": "1.9.4",
     "@types/multer": "1.4.7",
     "@types/supertest": "2.0.12",
@@ -29,11 +31,13 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "expeditious-engine-memory": "0.2.1",
     "express": "4.18.2",
     "express-expeditious": "5.1.1",
+    "jsonwebtoken": "9.0.1",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
     "pg": "8.11.3",
